--- a/templates/topic.html
+++ b/templates/topic.html
@@ -90,18 +90,24 @@
 </header>
 <h3>This is your result about {{ topic["title"] }}</h3>
 
-{{ svg_code | safe }}
-
+{{ svg_code | safe }} {% if length != 0 %}
 <div class="result">
   <p>Coefficient of Variation: {{ results["cv"] }}%</p>
   <p>{{ results["consistency_feedback"] }}</p>
   <p>Slope: {{ results["slope"] }}</p>
   <p>{{ results["progress_feedback"] }}</p>
 </div>
+{% endif %}
 
-<form id="form" data-id='{{ topic["id"] }}''>
+<form id="form" data-id='{{ topic["id"] }}'>
   <h3>Add value to this Topic</h3>
-  <input type="number" step="0.01" name="value" placeholder="Add Value" required/>
+  <input
+    type="number"
+    step="0.01"
+    name="value"
+    placeholder="Add Value"
+    required
+  />
   <button class="btn">Add</button>
 </form>
 
@@ -115,7 +121,7 @@
 
     fetch(`/topic/${form.dataset.id}/add`, {
       method: "POST",
-      body: JSON.stringify({value: form.value.value}),
+      body: JSON.stringify({ value: form.value.value }),
       headers: {
         "Content-Type": "application/json",
       },
@@ -125,7 +131,7 @@
         if (data.err != 0) {
           console.log(data);
         } else {
-          location.reload()
+          location.reload();
         }
       })
       .catch((err) => console.log(err));
